--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -27,7 +27,7 @@
 		
 	<servlet-mapping>
 		<servlet-name>appServlet</servlet-name>
-		<url-pattern>/data</url-pattern>
+		<url-pattern>/data/*</url-pattern>
 	</servlet-mapping>
 	
 	 <welcome-file-list>
